<resources>
    <string name="app_name">AllSmokeMe</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Доска</string>
    <string name="title_notifications">Уведомления</string>

    <string name="show">Show</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="chat">Chat</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="delete">Delete</string>

    <string name="menu_rent">Аренда</string>
    <string name="menu_shop">Магазин</string>
    <string name="menu_restaurant">Рестораны</string>
    <string name="menu_mixology">Миксология</string>
    <string name="menu_call">Позвонить</string>

    <string name="title_user">Пользователь</string>
    <string name="title_chat">Чат</string>
    <string name="article_added_to_fav">\"Go to Search\"</string>
    <string name="cancel">Cancel</string>
    <string name="menu_cart">Корзина</string>

    <string name="cart">Корзина</string>
    <string name="mix">Миксы</string>
    <string name="products">Products</string>
    <string name="buy">Оформить</string>

    <string name="cart.success.message" formatted="false">You bought %s products from your cart. With total price $%s</string>
    <string name="cart.add.message" formatted="false">Товар добавлен в корзину</string>
    <string name="cart.dont.message" formatted="false">Корзина пуста</string>
    <string name="dollars.format" formatted="false">%s руб.</string>
    <string name="buybutton_all">Изменить выбор</string>
    <string name="buybutton_one">Выбрать</string>
    <string name="textview">Выбрать микс:</string>
    <string name="help">Помощь</string>
    <string name="rentSum">Цена при самовывозе: </string>
    <string name="rentSumAll">Цена покура: </string>
    <string name="chooseTaste">Выбрать вкус</string>
    <string name="score">Забить глиняную чашу</string>
    <string name="scorePineaple">Забить чашу на ананасе</string>

    <string name="map_api_key">AIzaSyAMrXrHqp1SJxNev2HAeg4SpuRBV0oGLLo</string>

    <!--Map strings-->
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="street">Улица:<font color='#FF0000'>*</font></string>
    <string name="sity">Город:<font color='#FF0000'>*</font></string>
    <string name="house">Дом:<font color='#FF0000'>*</font></string>
</resources>