<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/liner1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/addMixName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:layout_gravity="center_vertical"
                android:text="Микс №1" />

            <Button
                android:id="@+id/delMixOnClickAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="5dp"
                android:text="Удалить" />

        </LinearLayout>


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/priseScorePineaple"
            android:layout_below="@+id/liner1"
            android:checked="true"
            android:text="Случайный простой"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/priseScorePineaple"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/switch1"
            android:text="Случайный прем"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/priseScorePineaple"
            android:layout_below="@+id/switch2"
            android:text="@string/score"/>

        <TextView
            android:id="@+id/priseScore"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@+id/switch3"
            android:text="500р"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/priseScorePineaple"
            android:layout_below="@+id/switch3"
            android:text="@string/scorePineaple"/>

        <TextView
            android:id="@+id/priseScorePineaple"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@+id/switch4"
            android:text="500р"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TableLayout
            android:id="@+id/table1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:collapseColumns=""
            android:layout_below="@+id/switch4"
            android:shrinkColumns="0">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/addMixOnClick1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="addVkusOnClick"
                    android:text="@string/chooseTaste" />

                <Button
                    android:id="@+id/delMixOnClick1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:minWidth="25dp"
                    android:minHeight="5dp"
                    android:visibility="gone"
                    android:text="x" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/addMixOnClick2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/chooseTaste"
                    android:onClick="addVkusOnClick"
                    android:visibility="gone"
                    android:layout_weight = "1"
                    android:clickable="true"
                    android:focusable="true" />
                <Button
                    android:id="@+id/delMixOnClick2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:minWidth="25dp"
                    android:minHeight="5dp"
                    android:visibility="gone"
                    android:text="x" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/addMixOnClick3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/chooseTaste"
                    android:onClick="addVkusOnClick"
                    android:layout_weight = "1"
                    android:visibility="gone"
                    android:clickable="true"
                    android:focusable="true" />
                <Button
                    android:id="@+id/delMixOnClick3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:minWidth="25dp"
                    android:minHeight="5dp"
                    android:visibility="gone"
                    android:text="x" />

            </TableRow>
        </TableLayout>
        <TextView
            android:id="@+id/priseM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:text="Стоимость:"
            android:layout_below="@id/table1"/>
        <TextView
            android:id="@+id/priseMix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="234234"
            android:layout_toEndOf="@id/priseM"
            android:layout_below="@id/table1"/>

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="5dp"
            android:layout_below="@id/priseM"
            android:background="?android:attr/listDivider" />
    </RelativeLayout>


</LinearLayout>