<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    android:fitsSystemWindows="true">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="com.example.allsmokeme.rentcart.RentCartActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/ic_map"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="20dp"
                        android:layout_alignParentEnd="true"
                        android:background="@null"
                        android:clickable="true"
                        android:onClick="onClick"
                        android:paddingHorizontal="10dp"
                        android:src="@drawable/ic_map"
                        android:focusable="true" />
                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/krugliye_ugli"
            android:paddingHorizontal="0dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" >

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/adress_recycler_view"
                        android:orientation="vertical"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </androidx.recyclerview.widget.RecyclerView>
                </LinearLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:paddingHorizontal="10dp"
                        android:layout_marginTop="20dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sity" />
                        <TextView
                            android:id="@+id/textSity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:background="@drawable/edittextstyle"
                            android:layout_weight="1"
                            android:clickable="false"
                            android:text="Новосибирск" />
                    </TableRow>
                    <TableRow>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:background="?android:attr/listDivider" />
                    </TableRow>
                    <TableRow
                        android:paddingHorizontal="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/street" />
                        <EditText
                            android:id="@+id/textStreet"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:background="@drawable/edittextstyle"
                            android:layout_weight="1"
                            android:text="" />
                    </TableRow>
                    <TableRow>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:background="?android:attr/listDivider" />
                    </TableRow>
                    <TableRow
                        android:background="#E3E3E3"
                        android:layout_width="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_span="2"
                            android:orientation="vertical">

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/places_recycler_view"
                                android:orientation="vertical"
                                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                            </androidx.recyclerview.widget.RecyclerView>
                        </LinearLayout>
                    </TableRow>
                    <TableRow
                        android:paddingHorizontal="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/house" />
                        <EditText
                            android:id="@+id/textHouse"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:background="@drawable/edittextstyle"
                            android:layout_weight="1"
                            android:text="" />
                    </TableRow>
                    <TableRow>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:background="?android:attr/listDivider" />
                    </TableRow>
                    <TableRow
                        android:paddingHorizontal="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Подъезд:" />
                        <EditText
                            android:id="@+id/textEntrance"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:background="@drawable/edittextstyle"
                            android:layout_weight="1"
                            android:text="" />
                    </TableRow>
                    <TableRow>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:background="?android:attr/listDivider" />
                    </TableRow>
                    <TableRow
                        android:paddingHorizontal="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Этаж:" />
                        <EditText
                            android:id="@+id/textFloor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:background="@drawable/edittextstyle"
                            android:layout_weight="1"
                            android:text="" />
                    </TableRow>
                    <TableRow>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:background="?android:attr/listDivider" />
                    </TableRow>
                    <TableRow
                        android:paddingHorizontal="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Квартира:" />
                        <EditText
                            android:id="@+id/textApartment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:background="@drawable/edittextstyle"
                            android:layout_weight="1"
                            android:text="" />
                    </TableRow>
                    <TableRow>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:background="?android:attr/listDivider" />
                    </TableRow>
                    <TableRow
                        android:paddingHorizontal="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Домофон:" />
                        <Spinner
                            android:id="@+id/textIntercom"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </TableRow>
                    <TableRow>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:background="?android:attr/listDivider" />
                    </TableRow>
                </TableLayout>

                <Button
                    android:id="@+id/buyButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:onClick="onBuyClick"
                    android:background="@drawable/button"
                    android:text="Добавить адрес" />

            </LinearLayout>
        </ScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.drawerlayout.widget.DrawerLayout>